proc-processor/src/test/resources/good/ParametersOnly.java
package good;

import org.neo4j.graphalgo.annotation.Configuration;

@Configuration("ParametersOnlyConfig")
public interface ParametersOnly {

    @Configuration.Parameter
    int onlyAsParameter();
}
